Se parametrizan los ads de google

--- a/bitcoincalculator-front/src/main/webapp/index.xhtml
+++ b/bitcoincalculator-front/src/main/webapp/index.xhtml
@@ -5,6 +5,16 @@
 	xmlns:ui="http://java.sun.com/jsf/facelets"
 	xmlns:p="http://primefaces.org/ui"
 	template="/layouts/templateHome.xhtml">
+	
+	<ui:define name="ads">
+		<script src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+		<script>
+  			(adsbygoogle = window.adsbygoogle || []).push({
+    				google_ad_client: "ca-pub-5308962568744638",
+    				enable_page_level_ads: true
+  			});
+		</script>
+	</ui:define>
 
 	<ui:define name="pageTitle">
 		<h3>
