Estructura de landing

--- a/bitcoincalculator-front/src/main/webapp/index.xhtml
+++ b/bitcoincalculator-front/src/main/webapp/index.xhtml
@@ -26,16 +26,16 @@
 				<h1>Pie</h1>
 			</f:facet>
 			
-			<chronos:landingSection id="section1" label="Section 1">
+			<chronos:landingSection id="section1" label="Section 1" link="false">
 				<h1>Features</h1>
 			</chronos:landingSection>
-			<chronos:landingSection id="section2" label="Section 2">
+			<chronos:landingSection id="section2" label="Events">
 				<h1>Events</h1>
 			</chronos:landingSection>
-			<chronos:landingSection id="section3" label="Section 3">
+			<chronos:landingSection id="section3" label="Pricing">
 				<h1>Pricing</h1>
 			</chronos:landingSection>
-			<chronos:landingSection id="section4" label="Section 4">
+			<chronos:landingSection id="section4" label="Video">
 				<h1>Video</h1>
 			</chronos:landingSection>
 		</chronos:landing>	
