--- a/bitcoincalculator-front/src/main/webapp/error.xhtml
+++ b/bitcoincalculator-front/src/main/webapp/error.xhtml
@@ -3,22 +3,24 @@
 	xmlns:h="http://java.sun.com/jsf/html"
 	xmlns:f="http://java.sun.com/jsf/core"
 	xmlns:ui="http://java.sun.com/jsf/facelets"
-	xmlns:a4j="http://richfaces.org/a4j"
-	xmlns:rich="http://richfaces.org/rich"
-	template="/WEB-INF/templates/templateHome.xhtml">
+	template="/layouts/error.xhtml">
 
 	<f:loadBundle
 		basename="net.bounceme.chronos.bitcoincalculator.MessageBundle"
 		var="res" />
 
-	<ui:define name="body">
-		<h:form>
-			<p>To our chagrin, an internal error has occurred in this
-				program. Please contact technical support.</p>
-			<p>If instructed by our support staff, please copy and paste the
-				following report into an email message</p>
-			<h:inputTextarea value="#{errorBean.stackTrace}" rows="40" cols="80"
-				readonly="true" />
-		</h:form>
+	<ui:define name="msg">
+		<p>
+			<h:outputText value="Ocurrio un error" />
+		</p>
+
+		<p>To our chagrin, an internal error has occurred in this program.
+			Please contact technical support.</p>
+		<p>If instructed by our support staff, please copy and paste the
+			following report into an email message</p>
+	</ui:define>
+
+	<ui:define name="footer">
+
 	</ui:define>
 </ui:composition>
