--- a/bitcoincalculator-front/src/main/webapp/index.xhtml
+++ b/bitcoincalculator-front/src/main/webapp/index.xhtml
@@ -18,9 +18,9 @@
 	</ui:define>
 
 	<ui:define name="content">
-		<chronos:landing menuPosition="sticky">
+		<chronos:landing menuPosition="sticky" styleClass="home">
 			<f:facet name="header">
-				<h1>Cabecera</h1>
+				<h1>BitcoinCalculator</h1>
 			</f:facet>
 			<f:facet name="footer">
 				<h1>Pie</h1>
