Enlaces de inicio y calculadora

--- a/bitcoincalculator-front/src/main/webapp/pages/index.xhtml
+++ b/bitcoincalculator-front/src/main/webapp/pages/index.xhtml
@@ -35,6 +35,9 @@
 
 				</p:dataGrid>
 				
+				<p:commandLink id="nonAjax" action="calculator" ajax="false">
+        			<h:outputText value="#{res['home.goToCalculator']}" />
+    			</p:commandLink>
 			</f:facet>
 			<f:facet name="footer">
 				<h1>Pie</h1>
