--- a/bitcoincalculator-front/src/main/webapp/pages/index.xhtml
+++ b/bitcoincalculator-front/src/main/webapp/pages/index.xhtml
@@ -5,7 +5,7 @@
 	xmlns:ui="http://java.sun.com/jsf/facelets"
 	xmlns:p="http://primefaces.org/ui"
 	xmlns:chronos="http://chronos.componentes.jsf/composite"
-	template="/layouts/landing.xhtml">
+	template="/layouts/empty.xhtml">
 
 	<ui:define name="ads">
 		<script src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
