--- a/bitcoincalculator-front/src/main/webapp/error.xhtml
+++ b/bitcoincalculator-front/src/main/webapp/error.xhtml
@@ -3,6 +3,7 @@
 	xmlns:h="http://java.sun.com/jsf/html"
 	xmlns:f="http://java.sun.com/jsf/core"
 	xmlns:ui="http://java.sun.com/jsf/facelets"
+	xmlns:p="http://primefaces.org/ui"
 	template="/layouts/error.xhtml">
 
 	<f:loadBundle
@@ -21,6 +22,8 @@
 	</ui:define>
 
 	<ui:define name="footer">
-
+		<p:commandLink id="nonAjax" action="index" ajax="false">
+			<h:outputText value="#{res['home']}" />
+		</p:commandLink>
 	</ui:define>
 </ui:composition>
