Styles for banners

--- a/bitcoincalculator-front/src/main/webapp/index.xhtml
+++ b/bitcoincalculator-front/src/main/webapp/index.xhtml
@@ -36,9 +36,9 @@
             			<h1>BitcoinCalculator</h1>
         			</f:facet>
 
-					<p:panel styleClass="panelBanner" style="text-align:center">
+					<p:panel styleClass="panelBanner #{banner.styleClass}">
 						<h:panelGrid columns="1" style="width:100%">
-							<h:outputText value="#{banner}" />
+							<h:outputText value="#{banner.content}" />
 						</h:panelGrid>
 					</p:panel>
 
