--- a/bitcoincalculator-front/src/main/webapp/index.xhtml
+++ b/bitcoincalculator-front/src/main/webapp/index.xhtml
@@ -44,15 +44,16 @@
 
 				</p:dataGrid>
 				
-				<p:commandLink id="nonAjax" action="calculator" ajax="false">
+				<p:commandLink styleClass="ui-button" id="nonAjax" action="calculator" ajax="false">
         			<h:outputText value="#{res['home.goToCalculator']}" />
     			</p:commandLink>
 			</f:facet>
+			
 			<f:facet name="footer">
 				<h1>Pie</h1>
 			</f:facet>
 
-			<chronos:landingSection id="section1" label="Section 1" link="false">
+			<chronos:landingSection id="section1" label="Features">
 				<h1>Features</h1>
 			</chronos:landingSection>
 			<chronos:landingSection id="section2" label="Events">
