--- a/bitcoincalculator-front/src/main/webapp/index.xhtml
+++ b/bitcoincalculator-front/src/main/webapp/index.xhtml
@@ -33,7 +33,7 @@
 					layout="grid" rows="1" id="banners" styleClass="banners">
 
 					<f:facet name="header">
-            			<h1>BitcoinCalculator</h1>
+            			<h1>Bitcoin calculator</h1>
         			</f:facet>
 
 					<p:panel styleClass="panelBanner #{banner.styleClass}">
@@ -54,7 +54,20 @@
 			</f:facet>
 
 			<chronos:landingSection id="section1" label="Features">
-				<h1>Features</h1>
+				<p:dataGrid var="feature" value="#{sessionBean.features}" columns="4"
+					layout="grid" rows="1" id="features" styleClass="features">
+
+					<p:outputPanel styleClass="panelFeature #{feature.styleClass}">
+						<h:panelGrid columns="1" columnClasses="first" style="width:100%">
+							<h:graphicImage value="#{feature.icon}" styleClass="icon"/>
+							<p:outputPanel>
+								<h3><h:outputText value="#{feature.title}"/></h3>
+							</p:outputPanel>
+							<h:outputText value="#{feature.content}" />
+						</h:panelGrid>
+					</p:outputPanel>
+
+				</p:dataGrid>
 			</chronos:landingSection>
 			<chronos:landingSection id="section2" label="Events">
 				<h1>Events</h1>
