--- a/bitcoincalculator-front/src/main/webapp/index.xhtml
+++ b/bitcoincalculator-front/src/main/webapp/index.xhtml
@@ -59,7 +59,8 @@
 
 					<p:outputPanel styleClass="panelFeature #{feature.styleClass}">
 						<h:panelGrid columns="1" columnClasses="first" style="width:100%">
-							<h:graphicImage value="#{feature.icon}" styleClass="icon"/>
+							<p:graphicImage
+									name="#{FacesContext.getCurrentInstance().getExternalContext()}/images/#{feature.icon}"/>
 							<p:outputPanel>
 								<h4><h:outputText value="#{feature.title}"/></h4>
 							</p:outputPanel>
