--- a/bitcoincalculator-front/src/main/webapp/index.xhtml
+++ b/bitcoincalculator-front/src/main/webapp/index.xhtml
@@ -53,7 +53,7 @@
 				<h1>Pie</h1>
 			</f:facet>
 
-			<chronos:landingSection id="section1" label="Features">
+			<chronos:landingSection id="section1" label="#{pub['index.landing.section.features']}">
 				<p:dataGrid var="feature" value="#{sessionBean.features}" columns="4"
 					layout="grid" rows="1" id="features" styleClass="features">
 
@@ -70,13 +70,13 @@
 
 				</p:dataGrid>
 			</chronos:landingSection>
-			<chronos:landingSection id="section2" label="Events">
+			<chronos:landingSection id="section2" label="#{pub['index.landing.section.stats']}">
 				<h1>Events</h1>
 			</chronos:landingSection>
 			<chronos:landingSection id="section3" label="Pricing">
 				<h1>Pricing</h1>
 			</chronos:landingSection>
-			<chronos:landingSection id="section4" label="Video">
+			<chronos:landingSection id="section4" tag="Video">
 				<h1>Video</h1>
 			</chronos:landingSection>
 		</chronos:landing>
