--- a/bitcoincalculator-front/src/main/webapp/index.xhtml
+++ b/bitcoincalculator-front/src/main/webapp/index.xhtml
@@ -73,10 +73,10 @@
 			<chronos:landingSection id="section2" label="#{pub['index.landing.section.stats']}">
 				<h1>Events</h1>
 			</chronos:landingSection>
-			<chronos:landingSection id="section3" label="Pricing">
+			<chronos:landingSection id="section3" label="#{pub['index.landing.section.recommendations']}">
 				<h1>Pricing</h1>
 			</chronos:landingSection>
-			<chronos:landingSection id="section4" tag="Video">
+			<chronos:landingSection id="section4" label="#{pub['index.landing.section.contact']}">
 				<h1>Video</h1>
 			</chronos:landingSection>
 		</chronos:landing>
