--- a/bitcoincalculator-front/src/main/webapp/index.xhtml
+++ b/bitcoincalculator-front/src/main/webapp/index.xhtml
@@ -16,25 +16,28 @@
 			});
 		</script>
 	</ui:define>
-	
+
 	<ui:define name="customCss">
 		<link rel="stylesheet" href="css/styles.css" />
 	</ui:define>
 
 	<ui:define name="content">
-	
+		<p:growl id="msgs" closable="true">
+			<p:autoUpdate />
+		</p:growl>
+
 		<chronos:landing menuPosition="sticky" styleClass="home">
 			<f:facet name="menuCustom">
-				<chronos:langSelector lang="#{sessionBean.lang}" flags="true"/>
+				<chronos:langSelector lang="#{sessionBean.lang}" flags="true" />
 			</f:facet>
-		
+
 			<f:facet name="header">
 				<p:dataGrid var="banner" value="#{sessionBean.banners}" columns="3"
 					layout="grid" rows="1" id="banners" styleClass="banners">
 
 					<f:facet name="header">
-            			<h1>Bitcoin calculator</h1>
-        			</f:facet>
+						<h1>Bitcoin calculator</h1>
+					</f:facet>
 
 					<p:panel styleClass="panelBanner #{banner.styleClass}">
 						<h:panelGrid columns="1" style="width:100%">
@@ -43,26 +46,31 @@
 					</p:panel>
 
 				</p:dataGrid>
-				
-				<p:commandLink styleClass="ui-button" id="nonAjax" action="calculator" ajax="false">
-        			<h:outputText value="#{res['home.goToCalculator']}" />
-    			</p:commandLink>
+
+				<p:commandButton value="#{res['home.goToCalculator']}"
+					styleClass="ui-button" type="button"
+					onclick="PF('dlgDemoCalc').show();" />
+
 			</f:facet>
-			
+
 			<f:facet name="footer">
 				<h1>Pie</h1>
 			</f:facet>
 
-			<chronos:landingSection id="section1" label="#{pub['index.landing.section.features']}">
-				<p:dataGrid var="feature" value="#{sessionBean.features}" columns="4"
-					layout="grid" rows="1" id="features" styleClass="features">
+			<chronos:landingSection id="section1"
+				label="#{pub['index.landing.section.features']}">
+				<p:dataGrid var="feature" value="#{sessionBean.features}"
+					columns="4" layout="grid" rows="1" id="features"
+					styleClass="features">
 
 					<p:outputPanel styleClass="panelFeature #{feature.styleClass}">
 						<h:panelGrid columns="1" columnClasses="first" style="width:100%">
 							<p:graphicImage
-									name="#{FacesContext.getCurrentInstance().getExternalContext()}/images/#{feature.icon}"/>
+								name="#{FacesContext.getCurrentInstance().getExternalContext()}/images/#{feature.icon}" />
 							<p:outputPanel>
-								<h4><h:outputText value="#{feature.title}"/></h4>
+								<h4>
+									<h:outputText value="#{feature.title}" />
+								</h4>
 							</p:outputPanel>
 							<h:outputText value="#{feature.content}" />
 						</h:panelGrid>
@@ -70,15 +78,32 @@
 
 				</p:dataGrid>
 			</chronos:landingSection>
-			<chronos:landingSection id="section2" label="#{pub['index.landing.section.stats']}">
+			<chronos:landingSection id="section2"
+				label="#{pub['index.landing.section.stats']}">
 				<h1>Events</h1>
 			</chronos:landingSection>
-			<chronos:landingSection id="section3" label="#{pub['index.landing.section.recommendations']}">
+			<chronos:landingSection id="section3"
+				label="#{pub['index.landing.section.recommendations']}">
 				<h1>Pricing</h1>
 			</chronos:landingSection>
-			<chronos:landingSection id="section4" label="#{pub['index.landing.section.contact']}">
+			<chronos:landingSection id="section4"
+				label="#{pub['index.landing.section.contact']}">
 				<h1>Video</h1>
 			</chronos:landingSection>
 		</chronos:landing>
+
+		<p:dialog header="#{pub['index.demo.title']}" modal="true"
+			widgetVar="dlgDemoCalc" showEffect="fade" hideEffect="fade"
+			minHeight="40">
+			<ui:include src="calculator.xhtml" />
+		</p:dialog>
+
+		<p:ajaxStatus onstart="PF('statusDialog').show()"
+			onsuccess="PF('statusDialog').hide()" />
+
+		<p:dialog widgetVar="statusDialog" modal="true" draggable="false"
+			closable="false" resizable="false" showHeader="false">
+			<i class="fa fa-clock-o"></i>
+		</p:dialog>
 	</ui:define>
 </ui:composition>
