--- a/bitcoincalculator-front/src/main/webapp/index.xhtml
+++ b/bitcoincalculator-front/src/main/webapp/index.xhtml
@@ -94,7 +94,7 @@
 
 		<p:dialog header="#{pub['index.demo.title']}" modal="true"
 			widgetVar="dlgDemoCalc" showEffect="fade" hideEffect="fade"
-			minHeight="40">
+			minHeight="40" responsive="true">
 			<ui:include src="calculator.xhtml" />
 		</p:dialog>
 
