--- a/bitcoincalculator-front/src/main/webapp/index.xhtml
+++ b/bitcoincalculator-front/src/main/webapp/index.xhtml
@@ -89,7 +89,8 @@
 
 		<p:dialog header="#{pub['index.demo.title']}" styleClass="dlgDemo" modal="true"
 			widgetVar="dlgDemoCalc" showEffect="fade" hideEffect="fade"
-			minHeight="40" responsive="true">
+			fitViewport="true" responsive="true" dynamic="true"
+			position="center center" onShow="PF('dlgDemoCalc').initPosition()">
 			<ui:include src="calculator.xhtml" />
 		</p:dialog>
 
