--- a/bitcoincalculator-front/src/main/webapp/calculator.xhtml
+++ b/bitcoincalculator-front/src/main/webapp/calculator.xhtml
@@ -118,7 +118,7 @@
 				<p:dataTable id="thisDifficulty" var="difficulty"
 					value="#{bitcoinCalculator.thisDifficulty}" paginatorPosition="top"
 					paginatorTemplate="{Titulo}" paginator="true" rows="10"
-					style="margin-bottom:20px">
+					style="margin-bottom:20px;width:604px;">
 
 					<f:facet name="{Titulo}">
 						<p:panelGrid styleClass="ui-panelgrid-blank" columns="4"
@@ -170,7 +170,7 @@
 				<p:dataTable id="nextDifficulty" var="difficulty"
 					value="#{bitcoinCalculator.nextDifficulty}" paginatorPosition="top"
 					paginatorTemplate="{Titulo}" paginator="true" rows="10"
-					style="margin-bottom:20px">
+					style="margin-bottom:20px;width:604px;">
 
 					<f:facet name="{Titulo}">
 						<p:panelGrid columns="4" styleClass="ui-panelgrid-blank"
