--- a/bitcoincalculator-front/src/main/webapp/index.xhtml
+++ b/bitcoincalculator-front/src/main/webapp/index.xhtml
@@ -90,6 +90,7 @@
 		<p:dialog header="#{pub['index.demo.title']}" styleClass="dlgDemo" modal="true"
 			widgetVar="dlgDemoCalc" showEffect="fade" hideEffect="fade"
 			fitViewport="true" responsive="true" dynamic="true"
+			width="650"
 			position="center center" onShow="PF('dlgDemoCalc').initPosition()">
 			<ui:include src="calculator.xhtml" />
 		</p:dialog>
